avcodec/utils: fix AVPacket lifetime in seek_frame_generic

Fixes ticket #5117